syntax = "proto3";

package org.hypertrace.label.config.service.v1;

option java_multiple_files = true;

message Label {
  string id = 1;
  LabelData data = 2;
  optional string created_by_application_rule_id = 3;
}

message LabelData {
  string key = 1;
  optional string color = 2;
  optional string description = 3;
}
