syntax = "proto3";

package org.hypertrace.label.config.service.v1;

option java_multiple_files = true;

import "org/hypertrace/label/config/service/v1/label.proto";

service LabelConfigService {

  // create tag
  rpc CreateLabel(CreateLabelRequest) returns (CreateLabelResponse) {}

  // get tag by id
  rpc GetLabel(GetLabelRequest) returns (GetLabelResponse) {}

  // get all tags
  rpc GetLabels(GetLabelsRequest) returns (GetLabelsResponse) {}

  // update tag
  rpc UpdateLabel(UpdateLabelRequest) returns (UpdateLabelResponse) {}

  // delete tag by id
  rpc DeleteLabel(DeleteLabelRequest) returns (DeleteLabelResponse) {}

}

message CreateLabelRequest {
  CreateLabel label = 1;
}

message CreateLabelResponse {
  Label label = 1;
}

message GetLabelRequest {
  string id = 1;
}

message GetLabelResponse {
  Label label = 1;
}

message GetLabelsRequest {
}

message GetLabelsResponse {
  repeated Label labels = 1;
}

message UpdateLabelRequest {
  Label label = 1;
}

message UpdateLabelResponse {
  Label label = 1;
}

message DeleteLabelRequest {
  string id = 1;
}

message DeleteLabelResponse {
}
